create Source object